# PaperTerminal

./: .gitignore  EPD.ml  IT8951.ml  IT8951.opam  Makefile  README.md  bcm.c  bcm2835.ml  cmd.ml  dune  dune-project  ioctl.c  run.sh  term.ml
EPDE/: EPD.ml  dune
lib/: EPD.ml  IT8951.ml  bcm.c  bcm.ml  bresenham.ml  bus.c  bus.h  bus.ml  bus.mli  cmd.ml  command.ml  command.mli  controller.ml  controller.mli  dune  interface.ml  matrix.ml  state.ml  text.ml
tests/: diag.ml  dune  init.expected  init.ml  lines.ml  loading_bar.ml  points.ml
