(library
  (name epd)
  ; This builds the bus.c library and saves it to "_build/default/lib/dllepd_stubs.so"
  ; The exact reason for this name and how to modify it is unclear
  (foreign_stubs
    (language c)
    (names bus))
  (libraries ctypes ctypes.foreign)
  ; This entry is copied from Camelwm which binds to the X11 lib in a similar way
  ; https://github.com/SkyVault/Camelwm/blob/master/dune
  ; This is also mentioned in the quickstart of the dune documentation
  ; https://dune.readthedocs.io/en/stable/quick-start.html#defining-a-library-with-c-stubs
  (c_library_flags :standard -lbcm2835))

(env
  (dev
    (flags (:standard -warn-error -A))))
